<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ComposeMessageActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/compose"
              android:textSize="@dimen/font_size_large"
              android:layout_margin="16dp"
              android:id="@+id/title"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/recipient"
              android:layout_below="@+id/title"
              android:layout_marginTop="16dp"
              android:layout_centerHorizontal="true" android:id="@+id/recipient_view"/>

    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_below="@+id/recipient_view"
              android:layout_centerHorizontal="true" android:id="@+id/recipient_edit"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/content"
              android:layout_below="@+id/recipient_edit"
              android:layout_marginTop="16dp"
              android:layout_centerHorizontal="true" android:id="@+id/content_view"/>

    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_below="@+id/content_view"
              android:layout_centerHorizontal="true" android:id="@+id/content_edit"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/selectEventToAttach"
              android:layout_below="@+id/content_edit"
              android:layout_marginTop="16dp"
              android:layout_centerHorizontal="true"
              android:id="@+id/select_event_view"/>

    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:layout_marginLeft="16dp"
                                               android:layout_marginRight="16dp"
                                               android:layout_marginTop="16dp"
                                               android:layout_marginBottom="100dp"
                                               android:layout_below="@id/select_event_view"
                                               android:scrollbars="vertical"
                                               android:background="@android:color/darker_gray"
                                               android:id="@+id/select_event"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="27dp"
            android:text="@string/send"
            android:layout_centerHorizontal="true"
            android:id="@+id/send_button" android:onClick="send"/>


</RelativeLayout>